fix: fixing gap with css

--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -1,3 +1,6 @@
+article{
+  height: calc(100vh - 140px);
+}
 .u-flip {
     animation: flip 1400ms infinite;
     animation-timing-function: cubic-bezier(.1,.67,.88,.34);
